Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8290485

[vector] REVERSE_BYTES for byte type should not emit any instructions

XMLWordPrintable

    • b08

      Vector API unary operation "REVERSE_BYTES" should not emit any instructions for byte vectors. Currently it emits "mov dst, src" both on x86 and aarch64 systems. And for masked "REVERSE_BYTES", it still generate "VectorBlend" which I think is redundant. To fix this, we can add igvn transformations for "ReverseBytesV" and "VectorBlend" in compiler. For "ReverseBytesV", it should return the vector input if the basic element type is T_BYTE. And for "VectorBlend", it should return the first input if the first input and the second input is the same one.

            xgong Xiaohong Gong
            xgong Xiaohong Gong
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: