8290485: [vector] REVERSE_BYTES for byte type should not emit any instructions